--- a/b4/templates/welcome.html
+++ b/b4/templates/welcome.html
@@ -1,8 +1,9 @@
+
 {% extends 'page.html' %}
 {% block content %}
 <div class="container-fluid">
   <div class="row">
     Hello world.
-  </div
+  </div>
 </div>
 {% endblock %}
